# grindurus-klines-service

./: .dockerignore  .env  .gitignore  README.md  backfill.ipynb  backfill_test.py  docker-compose.dev.yml  docker-compose.yml  dockerfile  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: celery_app.py  forms.py
app/adapters/: adapter.py  adapter_registry.py
app/adapters/implementations/: binance.py
app/database/: database.py  models.py
app/database/sql_scripts/: find_gaps.sql
app/service/: backfill_service.py  background_execution_service.py  data_service.py  symbols_service.py
app/tasks/: backfill.py
test/: backfill_test.py  find_gaps.py  symbols.py  test.ipynb
