[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "klines-service"
version = "0.1.0"
description = "OHLCV klines API with TimescaleDB and Celery backfill"
readme = "README.md"
requires-python = ">=3.13.7"
license = { text = "GNU General Public License v3.0" }
dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]==0.40.0",
    "sqlalchemy==2.0.49",
    "psycopg2-binary==2.9.11",
    "celery[sqlalchemy]==5.6.3",
    "ccxt==4.5.48",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = [
    "/app",
    "/main.py",
    "/pyproject.toml",
]
